# Greedy-Delvers

./: .gitignore  CMakeLists.txt  README.md  README_old.md  hello.c
network/: networkInterface.c
src/: events.c  events.h  inits.c  inits.h  main.c
